syntax = "proto3";
package registerpb;

message Register{
    string first_name = 1;
    string last_name = 2;
    string email=3;
    string mobile_number = 4;
}

message RegisterRequest{
    Register register = 1;
}

message RegisterResponse{
    string response = 1;
}

service RegisterService{
    rpc Registeration(RegisterRequest) returns (RegisterResponse){};
}